--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ modules.order
 __pycache__/
 *.py[cod]
 *$py.class
+
+modules/include/ocf/
+modules/.cache.mk
+modules/.tmp_versions/
+modules/**/*.o.cmd
