add benchmark code for comparing SIB

--- a/fio/jobs/kan_script/Makefile
+++ b/fio/jobs/kan_script/Makefile
@@ -1,6 +1,8 @@
-
 multi_thread_aio: multi_thread_aio.cpp ConsumerProducerQueue.h
 	g++ -std=c++11 -o multi_thread_aio -D_GNU_SOURCE multi_thread_aio.cpp ConsumerProducerQueue.h -lpthread -laio
+
+multi_thread_aio_dynamic: multi_thread_aio_dynamic.cpp ConsumerProducerQueue.h
+	g++ -std=c++11 -o multi_thread_aio_dynamic -D_GNU_SOURCE multi_thread_aio_dynamic.cpp ConsumerProducerQueue.h -lpthread -laio
 
 clean:
 	rm init raw_test identify_chunk identify_interleave identify_mapping
